@@ -502,6 +502,7 @@ export(brier)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
+export(convertMLBenchObjToTask)
 export(createDummyFeatures)
 export(crossval)
 export(db)
