@@ -4,6 +4,9 @@ mlr_2.5:
 - makeTuneControlGenSA: optimized function will be considered non-smooth
   per default (change via ... args)
 
+- new functions
+-- convertMLBenchObjToTask
+
 mlr_2.4:
 - WrappedModel printer was slightly improved
 - ReampleResult now stores the runtime it took to resample in a slot
